// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot on route ‘/graph/explore’ 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-htoDjs cKuKND"
    font-size="1"
  >
    <div
      class="sc-bdVaJa sc-dnqmqq sc-gZMcBi hvkIQp"
      data-testid="toggle"
      height="40"
      width="40"
    >
      <svg
        class="sc-VigVT kxnxSC"
        fill="blueMediumDark"
      >
        help.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot on route ‘/graph/explore’ 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-htoDjs coMsRC"
    font-size="1"
  >
    <div
      class="sc-bdVaJa sc-dnqmqq sc-iwsKbI lpfzsy"
      data-testid="toggle"
      height="40"
      width="40"
    >
      <svg
        class="sc-gqjmRU diPeGw"
        fill="greyDark"
      >
        expand.svg
      </svg>
    </div>
    <h2
      class="sc-bdVaJa sc-htpNat sc-bxivhb eydduH"
      color="blueDark"
      font-size="3"
      font-weight="bold"
    >
      Legende
    </h2>
    <svg>
      legend.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot on route ‘/graph’ 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-htoDjs cKuKND"
    font-size="1"
  >
    <div
      class="sc-bdVaJa sc-dnqmqq sc-gZMcBi hvkIQp"
      data-testid="toggle"
      height="40"
      width="40"
    >
      <svg
        class="sc-VigVT kxnxSC"
        fill="blueMediumDark"
      >
        help.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot on route ‘/graph’ 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-htoDjs coMsRC"
    font-size="1"
  >
    <div
      class="sc-bdVaJa sc-dnqmqq sc-iwsKbI lpfzsy"
      data-testid="toggle"
      height="40"
      width="40"
    >
      <svg
        class="sc-gqjmRU diPeGw"
        fill="greyDark"
      >
        expand.svg
      </svg>
    </div>
    <h2
      class="sc-bdVaJa sc-htpNat sc-bxivhb eydduH"
      color="blueDark"
      font-size="3"
      font-weight="bold"
    >
      Kollektionen
    </h2>
    <div
      class="sc-bdVaJa sc-htpNat cvNkTe"
      color="greyDark"
      width="330"
    >
      Kollektionen sind Daten-Sammlungen von Publikationen. Mehrere Kollektionen können zu einer Einrichtung gehören. Hamburg Open Science werden Daten aus verschiedenen Speicher-Systemen zur Verfügung gestellt. Dargestellt wird die Anzahl der in den Kollektionen verzeichneten Publikationen.
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot on route ‘/map’ 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-htoDjs cKuKND"
    font-size="1"
  >
    <div
      class="sc-bdVaJa sc-dnqmqq sc-gZMcBi hvkIQp"
      data-testid="toggle"
      height="40"
      width="40"
    >
      <svg
        class="sc-VigVT kxnxSC"
        fill="blueMediumDark"
      >
        help.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot on route ‘/map’ 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa sc-htoDjs coMsRC"
    font-size="1"
  >
    <div
      class="sc-bdVaJa sc-dnqmqq sc-iwsKbI lpfzsy"
      data-testid="toggle"
      height="40"
      width="40"
    >
      <svg
        class="sc-gqjmRU diPeGw"
        fill="greyDark"
      >
        expand.svg
      </svg>
    </div>
    <h2
      class="sc-bdVaJa sc-htpNat sc-bxivhb eydduH"
      color="blueDark"
      font-size="3"
      font-weight="bold"
    >
      Einrichtungen
    </h2>
    <div
      class="sc-bdVaJa sc-htpNat elofON"
      color="greyDark"
      width="330"
    >
      Einrichtungen stellen Hamburg Open Science Daten über ihre wissenschaftlichen Publikationen und Forschungsdaten zur Verfügung. Die Karte zeigt die Standorte und die Anzahl der zum Suchbegriff gefundenen Publikationen.
    </div>
    <svg>
      legend-map.svg
    </svg>
  </div>
</DocumentFragment>
`;
